--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ mysql-connector-python = "^8.0.22"
 google-auth-oauthlib = "^0.4.2"
 pandas = "^1.1.5"
 google-api-python-client = "^1.12.8"
+requests = "^2.25.1"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.790"
