--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,19 +7,17 @@ authors = ["Mike Babb <mike7400@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.9"
 PyYAML = "^5.3.1"
-lxml = "^4.6.2"
 google-auth-httplib2 = "^0.0.4"
-boto3 = "^1.16.33"
 SQLAlchemy = "^1.3.20"
 mysql-connector-python = "^8.0.22"
 google-auth-oauthlib = "^0.4.2"
 google-api-python-client = "^1.12.8"
 requests = "^2.25.1"
+PyMySQL = "^1.0.2"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.790"
 black = "^20.8b1"
-flake8 = "^3.8.4"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
