--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,23 +1,23 @@
 [tool.poetry]
-name = "fi-utils"
-version = "0.1.3"
+name = "qualtrics-utils"
+version = "0.2.0"
 description = ""
 authors = ["Mike Babb <mike7400@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.10"
-PyYAML = "^5.3.1"
-google-auth-httplib2 = "^0.0.4"
-SQLAlchemy = "^1.3.20"
-mysql-connector-python = "^8.0.22"
-google-auth-oauthlib = "^0.4.2"
-google-api-python-client = "^1.12.8"
-requests = "^2.25.1"
-PyMySQL = "^1.0.2"
-mypy = "^0.950"
+pandas = "^2.0.1"
+numpy = "^1.24.3"
+googleapiutils2 = "^0.5.8"
+sqlalchemy = "^2.0.13"
+pymysql = "^1.0.3"
+pyyaml = "^6.0"
 
-[tool.poetry.dev-dependencies]
-black = "^20.8b1"
+[tool.poetry.group.dev.dependencies]
+types-pyyaml = "^6.0.12.9"
+mypy = "^1.3.0"
+black = "^23.3.0"
+types-requests = "^2.30.0.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
