--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "qualtrics-utils"
-version = "0.2.0"
+version = "0.5.0"
 description = ""
 authors = ["Mike Babb <mike7400@gmail.com>"]
 
@@ -9,12 +9,9 @@ python = "^3.10"
 pandas = "^2.0.1"
 numpy = "^1.24.3"
 googleapiutils2 = "^0.5.8"
-sqlalchemy = "^2.0.13"
-pymysql = "^1.0.3"
-pyyaml = "^6.0"
+requests = "^2.30.0"
 
 [tool.poetry.group.dev.dependencies]
-types-pyyaml = "^6.0.12.9"
 mypy = "^1.3.0"
 black = "^23.3.0"
 types-requests = "^2.30.0.0"
