--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,8 @@
 .DS_Store
-config.php
-phinx.yml
 .vscode/
-vendor/
 .mypy_cache/
 .env
-bootstrap/
-storage/
 auth/
-my_venv/
 data/
 __pycache__/
-log/
-_*
+dist/
