--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ requests = "^2.30.0"
 mypy = "^1.3.0"
 black = "^23.3.0"
 types-requests = "^2.30.0.0"
+pytest = "^7.3.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
