--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,16 +11,17 @@ repository = "https://github.com/mkbabb/qualtrics-utils"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-pandas = "^2.0.2"
+pandas = "^2.0.3"
 requests = "^2.31.0"
+sqlalchemy = "^2.0.18"
+numpy = "^1.25.1"
+googleapiutils2 = "^0.10.2"
 
 [tool.poetry.group.dev.dependencies]
-numpy = "^1.24.3"
-googleapiutils2 = "^0.8.5"
-mypy = "^1.3.0"
+mypy = "^1.4.1"
 black = "^23.3.0"
 types-requests = "^2.31.0.1"
-pytest = "^7.3.1"
+pytest = "^7.4.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
