--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,14 +13,15 @@ repository = "https://github.com/mkbabb/qualtrics-utils"
 python = "^3.10"
 pandas = "^2.0.3"
 requests = "^2.31.0"
-sqlalchemy = "^2.0.18"
-numpy = "^1.25.1"
-googleapiutils2 = "^0.10.2"
+sqlalchemy = "^2.0.20"
+numpy = "^1.25.2"
+googleapiutils2 = "^0.11.1"
 
 [tool.poetry.group.dev.dependencies]
-mypy = "^1.4.1"
-black = "^23.3.0"
-types-requests = "^2.31.0.1"
+openapi-python-client = "^0.15.1"
+mypy = "^1.5.1"
+black = "^23.7.0"
+types-requests = "^2.31.0.2"
 pytest = "^7.4.0"
 
 [build-system]
