--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ requests = "^2.31.0"
 sqlalchemy = "^2.0.20"
 numpy = "^1.25.2"
 googleapiutils2 = "^0.11.1"
+loguru = "^0.7.2"
 
 [tool.poetry.group.dev.dependencies]
 openapi-python-client = "^0.15.1"
