--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ black = "^23.10.1"
 types-requests = "^2.31.0.10"
 pytest = "^7.4.3"
 pymysql = "^1.1.0"
+pandas-stubs = "^2.1.1.230928"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
