--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "qualtrics-utils"
-version = "0.6.0"
+version = "0.6.1"
 description = "Utilities for qualtrics surveys."
 authors = ["Mike Babb <mike7400@gmail.com>"]
 
@@ -11,18 +11,18 @@ repository = "https://github.com/mkbabb/qualtrics-utils"
 
 
 [tool.poetry.dependencies]
-python = ">=3.9,<3.13"
-pandas = "^2.1.2"
+python = "^3.10"
+pandas = "^2.1.3"
 requests = "^2.31.0"
 sqlalchemy = "^2.0.23"
-numpy = "^1.26.1"
+numpy = "^1.26.2"
 googleapiutils2 = "^0.11.1"
 loguru = "^0.7.2"
 
 [tool.poetry.group.dev.dependencies]
 openapi-python-client = "^0.15.1"
-mypy = "^1.6.1"
-black = "^23.10.1"
+mypy = "^1.7.0"
+black = "^23.11.0"
 types-requests = "^2.31.0.10"
 pytest = "^7.4.3"
 pymysql = "^1.1.0"
