--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "qualtrics-utils"
-version = "0.6.2"
+version = "0.6.4"
 description = "Utilities for qualtrics surveys."
 authors = ["Mike Babb <mike7400@gmail.com>"]
 
@@ -12,21 +12,21 @@ repository = "https://github.com/mkbabb/qualtrics-utils"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-pandas = "^2.1.4"
+pandas = "^2.2.0"
 requests = "^2.31.0"
-sqlalchemy = "^2.0.23"
-numpy = "^1.26.2"
+sqlalchemy = "^2.0.25"
+numpy = "^1.26.3"
 googleapiutils2 = "^0.13.1"
 loguru = "^0.7.2"
 
 [tool.poetry.group.dev.dependencies]
 openapi-python-client = "^0.15.1"
-mypy = "^1.7.1"
-black = "^23.12.0"
-types-requests = "^2.31.0.10"
-pytest = "^7.4.3"
+mypy = "^1.8.0"
+black = "^23.12.1"
+types-requests = "^2.31.0.20240106"
+pytest = "^7.4.4"
 pymysql = "^1.1.0"
-pandas-stubs = "^2.1.4.231218"
+pandas-stubs = "^2.1.4.231227"
 
 [[tool.mypy.overrides]]
 module = "google.*,google_auth_oauthlib.*"
