--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,6 @@ keywords = ["qualtrics", "qualtrics-api", "qualtrics-util"]
 license = "MIT"
 repository = "https://github.com/mkbabb/qualtrics-utils"
 
-
 [tool.poetry.dependencies]
 python = "^3.10"
 pandas = "^2.2.0"
@@ -31,6 +30,9 @@ pandas-stubs = "^2.1.4.231227"
 [[tool.mypy.overrides]]
 module = "google.*,google_auth_oauthlib.*"
 ignore_missing_imports = true
+
+[tool.poetry.scripts]
+qualtrics-utils-sync = "qualtrics_utils.sync:main"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
